# tcpuart

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: codec.rs  ctl.rs  lib.rs  msg.rs
common/src/ctl/: mod.rs
daemon/: Cargo.toml
daemon/src/: async_pty.rs  connection.rs  event.rs  main.rs  state.rs  tcp_bridge.rs
kernel_module/: .clangd  .gitignore  Makefile
kernel_module/include/: connection.h  message.h  state.h  tcpuart.h
kernel_module/src/: connection.c  message.c  tcpuart.c
manager/: Cargo.toml
manager/src/: ioctl.rs  main.rs
server/: .clangd  .env.example  .gitignore  extra_script.py  platformio.ini
server/include/: message.hpp  utils.hpp
server/main/: CMakeLists.txt  Kconfig.projbuild  main.c  message.h  tcp.c  tcp.h  uart.c  uart.h  wifi.c
server/src/: main.cpp  message.cpp  utils.cpp
test/: .gitignore  Makefile  main.c
test-server/: Cargo.toml
test-server/src/: main.rs
