[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "net"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
