[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "net", "sync", "signal", "io-util"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
common = { path = "../common" }
tokio-stream = "0.1.18"
nix = { version = "0.31.2", features = ["fs", "ioctl", "term", "uio"] }
futures = "0.3.32"
