[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "net", "sync", "signal", "io-util", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
nix = { workspace = true, features = ["fs", "ioctl", "term", "uio"] }
