[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "net", "sync", "signal", "io-util", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
nix = { workspace = true, features = ["fs", "ioctl", "term", "uio"] }
tracing = {workspace = true }
tracing-subscriber = {workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"
